turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: ')' expected but 'if' found.
  if(getCouleurSol() == Color.black()){
  ^LangtonsAnt:13: error: illegal start of simple expression
  }
  ^