turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  var (c == getCouleurSol()
  if(getCouleurSol() == Color.black()){
    setCouleurSol(Color.white);baisseBrosse()leveBrosse()
    gauche();avance();
  }
  else{
    setCouleurSol(Color.black);baisseBrosse();leveBrosse()
    droite();avance()
    
  }
    
    
  }

